--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ ul li::marker {
 }
 
 body {
-  background-image: url('/drew-beamer-5DD7-L4A4Uw-unsplash.jpg');
+  background-image: url(/public/drew-beamer-5DD7-L4A4Uw-unsplash.jpg);
   background-size: cover;
   height: 100vh;
   margin:20px;
@@ -30,15 +30,16 @@ button {
 
 span {
   background-color:#ac7349;
-  margin:10px;
+  margin:20px;
+
 }
 
 p {
   background-color: rgb(0, 0, 0, 0.71);
   color:white;
-  display: inline;
+  display: inline-block;
   padding: 7px 0;
-
+  margin-bottom: 5px;
 }
 
 ul {
