--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ ul li::marker {
 }
 
 body {
-  background-image: url(/public/drew-beamer-5DD7-L4A4Uw-unsplash.jpg);
+  background-image: url('./drew-beamer-5DD7-L4A4Uw-unsplash.jpg');
   background-size: cover;
   height: 100vh;
   margin:20px;
