--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,11 @@ ul li::marker {
 }
 
 body {
-  background-image: url('https://images.unsplash.com/photo-1530543787849-128d94430c6b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80');
+  
   background-size: cover;
   height: 100vh;
   margin:20px;
-  background-color:#fbe63bba;
+  background-color:rgba(0, 119, 15, 0.71);
 }
 
 .wrapper{
@@ -39,7 +39,7 @@ p {
   background-color: rgb(0, 0, 0, 0.71);
   color:white;
   display: inline-block;
-  padding: 7px 0;
+  padding: 7px 5px;
   margin-bottom: 5px;
 }
 
@@ -50,4 +50,16 @@ ul {
 
 img {
   width:30%;
+}
+
+#error{
+  padding: 0;
+  color:#ff3410;;
+ 
+}
+
+.text-info {
+  background-color:white;
+  color:#016001;
+  border-radius: 5px;
 }
