--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ ul li::marker {
 }
 
 body {
-  
+  background-image: url('./luca-bravo-xnqVGsbXgV4-unsplash.jpg') ;
   background-size: cover;
   height: 100vh;
   margin:20px;
